examples/test/testpolicy13177.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13177
  namespace: namespace440
spec:
  podSelector:
    matchLabels:
      key11: value24
      key31: value31
      key20: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value3
      podSelector:
        matchLabels:
          key47: value33
